[package]
name = "data-onion"
version = "0.1.0"
authors = ["Marc Noirot <marc.noirot@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "0.17.4"
byteorder = "1.3.4"
nom = "6"
packet = "0.1.3"
block-modes = "0.4.0"
aes = "0.4.0"
aes-ctr = "0.4.0"
